# adventofcode-2025

./: .gitignore  pyproject.toml
_template/: main.py  test_main.py
day1/: main.py  test_main.py
day2/: main.py  test_main.py
day3/: main.py  test_main.py
day4/: main.py  test_main.py
day5/: main.py  test_main.py
day6/: main.py  test_main.py
day7/: main.py  test_main.py
day8/: main.py  test_main.py
day9/: main.py  test_main.py
