[project]
name = "adventofcode-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.8.0",
    "python-ranges>=1.2.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.43.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool]
